--- a/dev_maincell.ipynb
+++ b/dev_maincell.ipynb
@@ -198,7 +198,7 @@
         "!pip install -r requirements.txt > /dev/null\n",
         "!apt-get install aria2 > /dev/null\n",
         "# Launching seed then launching game\n",
-        "%cd $modelsfolder\n",
+        "%cd -q $modelsfolder\n",
         "!aria2c --file-allocation=none --max-connection-per-server 16 --split 64 --bt-max-peers 500 --seed-ratio=0.0 --summary-interval=15 --disable-ipv6 -V --quiet=true $torrentfile & printf 'Initialization completed\\n' && cd /content/gdrive/My\\ Drive/$gamefolder > /dev/null && python play.py\n",
         "print('\\n' + str(gamename) + ' closed. Thanks for playing!')"
       ],
