PASTED from dev_maincell [27e4229] aria2 definitive edition

--- a/Open_CYOAI_BETA.ipynb
+++ b/Open_CYOAI_BETA.ipynb
@@ -303,7 +303,7 @@
         "# This small code sets all variables needed according to the repository variable\n",
         "# Is compatible with any repo using the standard filesystem. Just ad a new \"if (repo...\" block\n",
         "# and enter the repo variables to set it up.\n",
-        "root_dir = \"/content/gdrive/My Drive/\"\n",
+        "root_dir = \"/content/gdrive/My\\ Drive/\"\n",
         "if (repository == \"thadunge2/AIDungeon\"):\n",
         "  gamename = \"AIDungeon\"\n",
         "  gamefolder = \"AIDungeon\"\n",
@@ -390,8 +390,6 @@
         "                if (gamename == 'AIDungeon'):\n",
         "                    !unzip $zipname \n",
         "                !aria2c --file-allocation=none --max-connection-per-server 16 --split 64 --bt-max-peers 500 --seed-time=0 --summary-interval=15 --disable-ipv6 $torrentfile\n",
-        "                # Line above comment stops after download. Line after comment restart aria2 and seed quietly. Dirty but functional at least\n",
-        "                !aria2c --file-allocation=none --max-connection-per-server 16 --split 64 --bt-max-peers 500 --seed-ratio=0.0 --summary-interval=15 --disable-ipv6 --quiet=True -V $torrentfile\n",
         "                if os.path.isdir(modelpath):\n",
         "                    print('\\n\\n----------------------------------------------------')\n",
         "                    print(\"Model folder found!\")\n",
@@ -410,8 +408,8 @@
         "                print(\"Accepted inputs: yes, y, no, n.\\n\")\n",
         "        except KeyboardInterrupt:\n",
         "            print(\"Accepted inputs: yes, y, no, n.\\n\")\n",
-        "# The last bits of code. Checking for update verbose mode to\n",
-        "# show the message when it's already up-to-date.\n",
+        "# Checking for update verbose mode to show the message\n",
+        "# when it's already up-to-date.\n",
         "%cd -q $gamepath\n",
         "!git fetch -v\n",
         "# Asking if you want to update. might be a way to hook the fetch result and\n",
@@ -429,12 +427,15 @@
         "            print(\"Accepted inputs: yes, y, no, n.\\n\")\n",
         "    except KeyboardInterrupt:\n",
         "        print(\"Accepted inputs: yes, y, no, n.\\n\")\n",
-        "# Launching the game\n",
         "clear_output()\n",
-        "print('Launching ' + str(gamename) + '...\\n')\n",
+        "print('Initializing environment...\\n')\n",
+        "# Mandatory for dependencies and torrent seed\n",
         "!pip install -r requirements.txt > /dev/null\n",
-        "!python play.py\n",
-        "print('\\n' + str(gamename) + ' closed. Thanks for playing!')\n"
+        "!apt-get install aria2 > /dev/null\n",
+        "# Launching seed then launching game\n",
+        "%cd -q $modelsfolder\n",
+        "!aria2c --file-allocation=none --max-connection-per-server 16 --split 64 --bt-max-peers 500 --seed-ratio=0.0 --summary-interval=15 --disable-ipv6 -V --quiet=true $torrentfile & printf 'Initialization completed\\n' && cd /content/gdrive/My\\ Drive/$gamefolder > /dev/null && python play.py\n",
+        "print('\\n' + str(gamename) + ' closed. Thanks for playing!')"
       ],
       "execution_count": 0,
       "outputs": []
